# code-analyzer

./: CMakeLists.txt  README.md  build.sh  changeLog.md
scripts/: README.md  build.sh
source/: CMakeLists.txt  main.cpp  names.h  version.h
source/arg/: CMakeLists.txt  argument.cpp  argument.h  argument_reader.cpp  argument_reader.h
source/base/: CMakeLists.txt  analyzer.cpp  analyzer.h  file_tree.h
source/lib/: CMakeLists.txt  fs.cpp  fs.h
